testsuite/tests/partial-sigs/should_fail/T11976.stderr

T11976.hs:7:20: error: [GHC-83865]
    • Expected kind ‘k0 -> *’, but ‘Lens _ _’ has kind ‘*’
    • In an expression type signature: Lens _ _ _
      In the expression: undefined :: Lens _ _ _
      In an equation for ‘foo’: foo = undefined :: Lens _ _ _
